fix makefile dependency

--- a/tests/app/makefile
+++ b/tests/app/makefile
@@ -15,7 +15,9 @@ else
     this_mordavoknelib := libmordavokne-opengl
 endif
 
-this_ldlibs += ../../src/out/$(c)/$(this_mordavoknelib)$(dot_so)
+this_mordavoknelib := ../../src/out/$(c)/$(this_mordavoknelib)$(dot_so)
+
+this_ldlibs += $(this_mordavoknelib)
 
 ifeq ($(os),windows)
     this_ldlibs += -lmingw32 # these should go first, otherwise linker will complain about undefined reference to WinMain
@@ -32,9 +34,11 @@ this_ldlibs += -ltreeml -lmorda -lutki -lpapki -lm
 
 $(eval $(prorab-build-app))
 
+$(eval $(call prorab-depend, $(prorab_this_name), $(this_mordavoknelib)))
+
 this_run_name := app
 this_test_cmd := $(prorab_this_name)
-this_test_deps := $(prorab_this_name) ../../src/out/$(c)/$(this_mordavoknelib)$(dot_so)
+this_test_deps := $(prorab_this_name)
 this_test_ld_path := ../../src/out/$(c)
 $(eval $(prorab-run))
 
