--- a/android/mordavokne/build.gradle
+++ b/android/mordavokne/build.gradle
@@ -69,4 +69,5 @@ task copy_aar(type: Copy) {
 
 afterEvaluate {
     copy_aar.dependsOn(assembleRelease)
+	copy_aar.dependsOn(bundleStaticLibRelease)
 }
