--- a/cocoapods/mordavokne.podspec.in
+++ b/cocoapods/mordavokne.podspec.in
@@ -6,7 +6,9 @@ Pod::Spec.new do |s|
   s.license      = { :type => 'MIT', :file => 'LICENSE' }
   s.author       = { "Ivan Gagis" => "igagis@gmail.com" }
   s.platform     = :ios
-  s.ios.deployment_target = '9.0'
+
+  # TODO: make 11.0 ?
+  s.ios.deployment_target = '13.0'
 
   s.source = { :http => "http://gagis.hopto.org/repo/cppfw/cocoapods/#{s.name}-#{s.version}.zip" }
 
