--- a/xcode/Podfile
+++ b/xcode/Podfile
@@ -2,7 +2,8 @@ source 'https://github.com/cppfw/cocoapods-repo.git'
 
 project 'mordavokne/mordavokne.xcodeproj'
 
-platform :ios, '9.0'
+# TODO: make 11.0 ?
+platform :ios, '13.0'
 
 target "mordavokne" do
 	pod 'utki', '>= 1.1.124'
