run lint on windows build

--- a/msys2/PKGBUILD.in
+++ b/msys2/PKGBUILD.in
@@ -31,7 +31,8 @@ groups=()
 
 depends=("${pkgPrefix}morda" "${pkgPrefix}morda-render-opengl")
 
-makedepends=('myci' 'prorab' 'prorab-extra' 'doxygen')
+# 'clang-tools-extra' for clang-tidy
+makedepends=('myci' 'prorab' 'prorab-extra' 'doxygen' "${pkgPrefix}clang-tools-extra")
 checkdepends=('myci')
 optdepends=()
 provides=()
@@ -55,6 +56,11 @@ prepare() {
 build() {
 	cd "$rootDir"
 	make
+
+	# Since we have platform-dependent code, we need to run lint in Windows builds,
+	# so build 'asan' config which runs lint. Should not be a big deal, since th library
+	# doesn't have too much code.
+	make config=asan
 }
 
 check() {
