fix msys2 build

--- a/msys2/PKGBUILD.in
+++ b/msys2/PKGBUILD.in
@@ -58,9 +58,9 @@ build() {
 	make
 
 	# Since we have platform-dependent code, we need to run lint in Windows builds,
-	# so build 'asan' config which runs lint. Should not be a big deal, since th library
-	# doesn't have too much code.
-	make config=asan
+	# so build 'lint' config which runs lint. Should not be a big deal, since the library
+	# doesn't have too much code, ok to compile it twice.
+	make config=lint
 }
 
 check() {
