--- a/examples/basic/makefile
+++ b/examples/basic/makefile
@@ -24,14 +24,14 @@ ifeq ($(prorab_os),windows)
     this_ldlibs += -lmingw32 #these should go first, otherwise linker will complain about undefined reference to WinMain
 #    this_ldlibs += $(prorab_this_dir)../../src/libmorda$(prorab_lib_extension)
     this_ldflags += -L/usr/lib -L/usr/local/lib
-    this_ldlibs +=  -lglew32 -lopengl32 -lpng -ljpeg -lz -lfreetype -mwindows
+    this_ldlibs +=  -lglew32 -lopengl32 -lz -lfreetype -mwindows
 
     this_cxxflags += -I/usr/include -I/usr/local/include
 
     #WORKAROUND for MinGW bug:
     this_cxxflags += -D__STDC_FORMAT_MACROS
 else ifeq ($(prorab_os),macosx)
-    this_ldlibs += -lGLEW -framework OpenGL -framework Cocoa -lpng -ljpeg -lfreetype
+    this_ldlibs += -lGLEW -framework OpenGL -framework Cocoa -lfreetype
     this_ldlibs += -lmordavokne
 else ifeq ($(prorab_os),linux)
     this_ldlibs += -lGLEW -pthread -lGL
