--- a/src/makefile
+++ b/src/makefile
@@ -1,6 +1,7 @@
 include prorab.mk
 include prorab-license.mk
 include prorab-linux.mk
+include prorab-clang-format.mk
 
 define mordavokne_rules
 
@@ -71,3 +72,5 @@ mordavokne_rules :=
 this_license_file := ../LICENSE
 this_src_dir := .
 $(eval $(prorab-license))
+
+$(eval $(prorab-clang-format))
