--- a/tests/app/makefile
+++ b/tests/app/makefile
@@ -7,6 +7,8 @@ $(eval $(call prorab-config, ../../config))
 
 this_srcs += $(call prorab-src-dir, src)
 
+this_cxxflags += -isystem ../../src
+
 ifeq ($(ogles2), true)
     this_mordavoknelib := libmordavokne-opengles
 else
