--- a/msvs_solution/libmordavokne/libmordavokne.vcxproj
+++ b/msvs_solution/libmordavokne/libmordavokne.vcxproj
@@ -434,45 +434,47 @@
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
     <Import Project="..\packages\glew.v140.1.12.0\build\native\glew.v140.targets" Condition="Exists('..\packages\glew.v140.1.12.0\build\native\glew.v140.targets')" />
-    <Import Project="..\packages\libmorda-render-opengl.0.1.49\build\native\libmorda-render-opengl.targets" Condition="Exists('..\packages\libmorda-render-opengl.0.1.49\build\native\libmorda-render-opengl.targets')" />
-    <Import Project="..\packages\freetype_static.2.10.1.10\build\native\freetype_static.targets" Condition="Exists('..\packages\freetype_static.2.10.1.10\build\native\freetype_static.targets')" />
-    <Import Project="..\packages\libagg.2.8.7\build\native\libagg.targets" Condition="Exists('..\packages\libagg.2.8.7\build\native\libagg.targets')" />
-    <Import Project="..\packages\libjpeg_static.6.1.1.12\build\native\libjpeg_static.targets" Condition="Exists('..\packages\libjpeg_static.6.1.1.12\build\native\libjpeg_static.targets')" />
-    <Import Project="..\packages\libutki.1.1.155\build\native\libutki.targets" Condition="Exists('..\packages\libutki.1.1.155\build\native\libutki.targets')" />
-    <Import Project="..\packages\libmikroxml.0.1.42\build\native\libmikroxml.targets" Condition="Exists('..\packages\libmikroxml.0.1.42\build\native\libmikroxml.targets')" />
-    <Import Project="..\packages\libopros.1.0.55\build\native\libopros.targets" Condition="Exists('..\packages\libopros.1.0.55\build\native\libopros.targets')" />
-    <Import Project="..\packages\libnitki.1.0.49\build\native\libnitki.targets" Condition="Exists('..\packages\libnitki.1.0.49\build\native\libnitki.targets')" />
-    <Import Project="..\packages\libr4.1.0.57\build\native\libr4.targets" Condition="Exists('..\packages\libr4.1.0.57\build\native\libr4.targets')" />
-    <Import Project="..\packages\zlib_static.1.2.11.10\build\native\zlib_static.targets" Condition="Exists('..\packages\zlib_static.1.2.11.10\build\native\zlib_static.targets')" />
-    <Import Project="..\packages\libpapki.1.0.107\build\native\libpapki.targets" Condition="Exists('..\packages\libpapki.1.0.107\build\native\libpapki.targets')" />
-    <Import Project="..\packages\libcssom.0.1.25\build\native\libcssom.targets" Condition="Exists('..\packages\libcssom.0.1.25\build\native\libcssom.targets')" />
-    <Import Project="..\packages\libpng_static.1.4.1.12\build\native\libpng_static.targets" Condition="Exists('..\packages\libpng_static.1.4.1.12\build\native\libpng_static.targets')" />
-    <Import Project="..\packages\libsvgdom.0.3.71\build\native\libsvgdom.targets" Condition="Exists('..\packages\libsvgdom.0.3.71\build\native\libsvgdom.targets')" />
-    <Import Project="..\packages\libsvgren.0.5.17\build\native\libsvgren.targets" Condition="Exists('..\packages\libsvgren.0.5.17\build\native\libsvgren.targets')" />
-    <Import Project="..\packages\libtreeml.0.1.50\build\native\libtreeml.targets" Condition="Exists('..\packages\libtreeml.0.1.50\build\native\libtreeml.targets')" />
-    <Import Project="..\packages\libmorda.0.5.170\build\native\libmorda.targets" Condition="Exists('..\packages\libmorda.0.5.170\build\native\libmorda.targets')" />
+    <Import Project="..\packages\freetype_static.2.10.1.12\build\native\freetype_static.targets" Condition="Exists('..\packages\freetype_static.2.10.1.12\build\native\freetype_static.targets')" />
+    <Import Project="..\packages\libagg.2.8.21\build\native\libagg.targets" Condition="Exists('..\packages\libagg.2.8.21\build\native\libagg.targets')" />
+    <Import Project="..\packages\libjpeg_static.6.1.1.14\build\native\libjpeg_static.targets" Condition="Exists('..\packages\libjpeg_static.6.1.1.14\build\native\libjpeg_static.targets')" />
+    <Import Project="..\packages\libutki.1.1.218\build\native\libutki.targets" Condition="Exists('..\packages\libutki.1.1.218\build\native\libutki.targets')" />
+    <Import Project="..\packages\libmikroxml.0.1.57\build\native\libmikroxml.targets" Condition="Exists('..\packages\libmikroxml.0.1.57\build\native\libmikroxml.targets')" />
+    <Import Project="..\packages\libopros.1.0.89\build\native\libopros.targets" Condition="Exists('..\packages\libopros.1.0.89\build\native\libopros.targets')" />
+    <Import Project="..\packages\libnitki.1.0.78\build\native\libnitki.targets" Condition="Exists('..\packages\libnitki.1.0.78\build\native\libnitki.targets')" />
+    <Import Project="..\packages\libr4.1.0.75\build\native\libr4.targets" Condition="Exists('..\packages\libr4.1.0.75\build\native\libr4.targets')" />
+    <Import Project="..\packages\zlib_static.1.2.11.12\build\native\zlib_static.targets" Condition="Exists('..\packages\zlib_static.1.2.11.12\build\native\zlib_static.targets')" />
+    <Import Project="..\packages\libpapki.1.0.132\build\native\libpapki.targets" Condition="Exists('..\packages\libpapki.1.0.132\build\native\libpapki.targets')" />
+    <Import Project="..\packages\libcssom.0.2.7\build\native\libcssom.targets" Condition="Exists('..\packages\libcssom.0.2.7\build\native\libcssom.targets')" />
+    <Import Project="..\packages\libpng_static.1.6.39.1\build\native\libpng_static.targets" Condition="Exists('..\packages\libpng_static.1.6.39.1\build\native\libpng_static.targets')" />
+    <Import Project="..\packages\libsvgdom.0.4.10\build\native\libsvgdom.targets" Condition="Exists('..\packages\libsvgdom.0.4.10\build\native\libsvgdom.targets')" />
+    <Import Project="..\packages\libsvgren.0.6.8\build\native\libsvgren.targets" Condition="Exists('..\packages\libsvgren.0.6.8\build\native\libsvgren.targets')" />
+    <Import Project="..\packages\libtreeml.0.2.12\build\native\libtreeml.targets" Condition="Exists('..\packages\libtreeml.0.2.12\build\native\libtreeml.targets')" />
+    <Import Project="..\packages\libmorda.0.5.208\build\native\libmorda.targets" Condition="Exists('..\packages\libmorda.0.5.208\build\native\libmorda.targets')" />
+    <Import Project="..\packages\libmorda-render-opengl.0.1.61\build\native\libmorda-render-opengl.targets" Condition="Exists('..\packages\libmorda-render-opengl.0.1.61\build\native\libmorda-render-opengl.targets')" />
+    <Import Project="..\packages\librasterimage.0.1.6\build\native\librasterimage.targets" Condition="Exists('..\packages\librasterimage.0.1.6\build\native\librasterimage.targets')" />
   </ImportGroup>
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
     <PropertyGroup>
       <ErrorText>This project references NuGet package(s) that are missing on this computer. Use NuGet Package Restore to download them.  For more information, see http://go.microsoft.com/fwlink/?LinkID=322105. The missing file is {0}.</ErrorText>
     </PropertyGroup>
     <Error Condition="!Exists('..\packages\glew.v140.1.12.0\build\native\glew.v140.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\glew.v140.1.12.0\build\native\glew.v140.targets'))" />
-    <Error Condition="!Exists('..\packages\libmorda-render-opengl.0.1.49\build\native\libmorda-render-opengl.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\libmorda-render-opengl.0.1.49\build\native\libmorda-render-opengl.targets'))" />
-    <Error Condition="!Exists('..\packages\freetype_static.2.10.1.10\build\native\freetype_static.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\freetype_static.2.10.1.10\build\native\freetype_static.targets'))" />
-    <Error Condition="!Exists('..\packages\libagg.2.8.7\build\native\libagg.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\libagg.2.8.7\build\native\libagg.targets'))" />
-    <Error Condition="!Exists('..\packages\libjpeg_static.6.1.1.12\build\native\libjpeg_static.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\libjpeg_static.6.1.1.12\build\native\libjpeg_static.targets'))" />
-    <Error Condition="!Exists('..\packages\libutki.1.1.155\build\native\libutki.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\libutki.1.1.155\build\native\libutki.targets'))" />
-    <Error Condition="!Exists('..\packages\libmikroxml.0.1.42\build\native\libmikroxml.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\libmikroxml.0.1.42\build\native\libmikroxml.targets'))" />
-    <Error Condition="!Exists('..\packages\libopros.1.0.55\build\native\libopros.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\libopros.1.0.55\build\native\libopros.targets'))" />
-    <Error Condition="!Exists('..\packages\libnitki.1.0.49\build\native\libnitki.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\libnitki.1.0.49\build\native\libnitki.targets'))" />
-    <Error Condition="!Exists('..\packages\libr4.1.0.57\build\native\libr4.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\libr4.1.0.57\build\native\libr4.targets'))" />
-    <Error Condition="!Exists('..\packages\zlib_static.1.2.11.10\build\native\zlib_static.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\zlib_static.1.2.11.10\build\native\zlib_static.targets'))" />
-    <Error Condition="!Exists('..\packages\libpapki.1.0.107\build\native\libpapki.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\libpapki.1.0.107\build\native\libpapki.targets'))" />
-    <Error Condition="!Exists('..\packages\libcssom.0.1.25\build\native\libcssom.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\libcssom.0.1.25\build\native\libcssom.targets'))" />
-    <Error Condition="!Exists('..\packages\libpng_static.1.4.1.12\build\native\libpng_static.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\libpng_static.1.4.1.12\build\native\libpng_static.targets'))" />
-    <Error Condition="!Exists('..\packages\libsvgdom.0.3.71\build\native\libsvgdom.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\libsvgdom.0.3.71\build\native\libsvgdom.targets'))" />
-    <Error Condition="!Exists('..\packages\libsvgren.0.5.17\build\native\libsvgren.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\libsvgren.0.5.17\build\native\libsvgren.targets'))" />
-    <Error Condition="!Exists('..\packages\libtreeml.0.1.50\build\native\libtreeml.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\libtreeml.0.1.50\build\native\libtreeml.targets'))" />
-    <Error Condition="!Exists('..\packages\libmorda.0.5.170\build\native\libmorda.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\libmorda.0.5.170\build\native\libmorda.targets'))" />
+    <Error Condition="!Exists('..\packages\freetype_static.2.10.1.12\build\native\freetype_static.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\freetype_static.2.10.1.12\build\native\freetype_static.targets'))" />
+    <Error Condition="!Exists('..\packages\libagg.2.8.21\build\native\libagg.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\libagg.2.8.21\build\native\libagg.targets'))" />
+    <Error Condition="!Exists('..\packages\libjpeg_static.6.1.1.14\build\native\libjpeg_static.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\libjpeg_static.6.1.1.14\build\native\libjpeg_static.targets'))" />
+    <Error Condition="!Exists('..\packages\libutki.1.1.218\build\native\libutki.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\libutki.1.1.218\build\native\libutki.targets'))" />
+    <Error Condition="!Exists('..\packages\libmikroxml.0.1.57\build\native\libmikroxml.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\libmikroxml.0.1.57\build\native\libmikroxml.targets'))" />
+    <Error Condition="!Exists('..\packages\libopros.1.0.89\build\native\libopros.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\libopros.1.0.89\build\native\libopros.targets'))" />
+    <Error Condition="!Exists('..\packages\libnitki.1.0.78\build\native\libnitki.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\libnitki.1.0.78\build\native\libnitki.targets'))" />
+    <Error Condition="!Exists('..\packages\libr4.1.0.75\build\native\libr4.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\libr4.1.0.75\build\native\libr4.targets'))" />
+    <Error Condition="!Exists('..\packages\zlib_static.1.2.11.12\build\native\zlib_static.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\zlib_static.1.2.11.12\build\native\zlib_static.targets'))" />
+    <Error Condition="!Exists('..\packages\libpapki.1.0.132\build\native\libpapki.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\libpapki.1.0.132\build\native\libpapki.targets'))" />
+    <Error Condition="!Exists('..\packages\libcssom.0.2.7\build\native\libcssom.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\libcssom.0.2.7\build\native\libcssom.targets'))" />
+    <Error Condition="!Exists('..\packages\libpng_static.1.6.39.1\build\native\libpng_static.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\libpng_static.1.6.39.1\build\native\libpng_static.targets'))" />
+    <Error Condition="!Exists('..\packages\libsvgdom.0.4.10\build\native\libsvgdom.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\libsvgdom.0.4.10\build\native\libsvgdom.targets'))" />
+    <Error Condition="!Exists('..\packages\libsvgren.0.6.8\build\native\libsvgren.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\libsvgren.0.6.8\build\native\libsvgren.targets'))" />
+    <Error Condition="!Exists('..\packages\libtreeml.0.2.12\build\native\libtreeml.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\libtreeml.0.2.12\build\native\libtreeml.targets'))" />
+    <Error Condition="!Exists('..\packages\libmorda.0.5.208\build\native\libmorda.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\libmorda.0.5.208\build\native\libmorda.targets'))" />
+    <Error Condition="!Exists('..\packages\libmorda-render-opengl.0.1.61\build\native\libmorda-render-opengl.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\libmorda-render-opengl.0.1.61\build\native\libmorda-render-opengl.targets'))" />
+    <Error Condition="!Exists('..\packages\librasterimage.0.1.6\build\native\librasterimage.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\librasterimage.0.1.6\build\native\librasterimage.targets'))" />
   </Target>
 </Project>
