--- a/msvs_solution/libmordavokne/packages.config
+++ b/msvs_solution/libmordavokne/packages.config
@@ -1,21 +1,22 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="freetype_static" version="2.10.1.10" targetFramework="native" />
+  <package id="freetype_static" version="2.10.1.12" targetFramework="native" />
   <package id="glew.v140" version="1.12.0" targetFramework="native" />
-  <package id="libagg" version="2.8.7" targetFramework="native" />
-  <package id="libcssom" version="0.1.25" targetFramework="native" />
-  <package id="libjpeg_static" version="6.1.1.12" targetFramework="native" />
-  <package id="libmikroxml" version="0.1.42" targetFramework="native" />
-  <package id="libmorda" version="0.5.170" targetFramework="native" />
-  <package id="libmorda-render-opengl" version="0.1.49" targetFramework="native" />
-  <package id="libnitki" version="1.0.49" targetFramework="native" />
-  <package id="libopros" version="1.0.55" targetFramework="native" />
-  <package id="libpapki" version="1.0.107" targetFramework="native" />
-  <package id="libpng_static" version="1.4.1.12" targetFramework="native" />
-  <package id="libr4" version="1.0.57" targetFramework="native" />
-  <package id="libsvgdom" version="0.3.71" targetFramework="native" />
-  <package id="libsvgren" version="0.5.17" targetFramework="native" />
-  <package id="libtreeml" version="0.1.50" targetFramework="native" />
-  <package id="libutki" version="1.1.155" targetFramework="native" />
-  <package id="zlib_static" version="1.2.11.10" targetFramework="native" />
+  <package id="libagg" version="2.8.21" targetFramework="native" />
+  <package id="libcssom" version="0.2.7" targetFramework="native" />
+  <package id="libjpeg_static" version="6.1.1.14" targetFramework="native" />
+  <package id="libmikroxml" version="0.1.57" targetFramework="native" />
+  <package id="libmorda" version="0.5.208" targetFramework="native" />
+  <package id="libmorda-render-opengl" version="0.1.61" targetFramework="native" />
+  <package id="libnitki" version="1.0.78" targetFramework="native" />
+  <package id="libopros" version="1.0.89" targetFramework="native" />
+  <package id="libpapki" version="1.0.132" targetFramework="native" />
+  <package id="libpng_static" version="1.6.39.1" targetFramework="native" />
+  <package id="libr4" version="1.0.75" targetFramework="native" />
+  <package id="librasterimage" version="0.1.6" targetFramework="native" />
+  <package id="libsvgdom" version="0.4.10" targetFramework="native" />
+  <package id="libsvgren" version="0.6.8" targetFramework="native" />
+  <package id="libtreeml" version="0.2.12" targetFramework="native" />
+  <package id="libutki" version="1.1.218" targetFramework="native" />
+  <package id="zlib_static" version="1.2.11.12" targetFramework="native" />
 </packages>
