--- a/debian/control.in
+++ b/debian/control.in
@@ -18,7 +18,8 @@ Build-Depends:
 		libmorda-render-opengl-dev (>= 0.1.46),
 		libmorda-render-opengles-dev (>= 0.1.37),
 		libegl1-mesa-dev,
-		libgles2-mesa-dev
+		libgles2-mesa-dev,
+		libgtk-3-dev
 Build-Depends-Indep: doxygen
 Standards-Version: 3.9.5
 
