--- a/nuget/nuget.autopkg.in
+++ b/nuget/nuget.autopkg.in
@@ -33,7 +33,7 @@ nuget{
 		packages : {
 			libr4/0.1.53;
 			libmorda/0.5.163;
-			libmorda-render-opengl/0.1.46;
+			libruis-render-opengl/0.1.46;
 			glew.v140/1.12.0;
 			libpapki/1.0.93;
 			libopros/1.0.46;
