--- a/tests/app/makefile
+++ b/tests/app/makefile
@@ -1,7 +1,7 @@
 include prorab.mk
 include prorab-test.mk
 
-this_name := mordavokne-test
+this_name := ruisapp-test
 
 $(eval $(call prorab-config, ../../config))
 
@@ -10,14 +10,14 @@ this_srcs += $(call prorab-src-dir, src)
 this_cxxflags += -isystem ../../src
 
 ifeq ($(ogles2), true)
-    this_mordavoknelib := libmordavokne-opengles
+    this_libruisapp := libruisapp-opengles
 else
-    this_mordavoknelib := libmordavokne-opengl
+    this_libruisapp := libruisapp-opengl
 endif
 
-this_mordavoknelib := ../../src/out/$(c)/$(this_mordavoknelib)$(dot_so)
+this_libruisapp := ../../src/out/$(c)/$(this_libruisapp)$(dot_so)
 
-this_ldlibs += $(this_mordavoknelib)
+this_ldlibs += $(this_libruisapp)
 
 ifeq ($(os),windows)
     this_ldlibs += -lmingw32 # these should go first, otherwise linker will complain about undefined reference to WinMain
@@ -30,11 +30,11 @@ else ifeq ($(os),linux)
     this_ldflags += -rdynamic
 endif
 
-this_ldlibs += -ltreeml -lmorda -lutki -lpapki -lm
+this_ldlibs += -ltreeml -lruis -lutki -lpapki -lm
 
 $(eval $(prorab-build-app))
 
-$(eval $(call prorab-depend, $(prorab_this_name), $(this_mordavoknelib)))
+$(eval $(call prorab-depend, $(prorab_this_name), $(this_libruisapp)))
 
 this_run_name := app
 this_test_cmd := $(prorab_this_name)
