--- a/doc/makefile
+++ b/doc/makefile
@@ -2,6 +2,6 @@ include prorab.mk
 include prorab-doxygen.mk
 
 this_out_dir := out
-this_name := mordavokne
+this_name := ruisapp
 
 $(eval $(prorab-build-doxygen))
