--- a/xcode/Podfile
+++ b/xcode/Podfile
@@ -11,5 +11,5 @@ target "mordavokne" do
 	pod 'r4', '>= 0.1.53'
 	pod 'treeml', '>= 0.1.28'
 	pod 'morda', '>= 0.5.195'
-	pod 'morda-render-opengles', '>= 0.1.37'
+	pod 'ruis-render-opengles', '>= 0.1.37'
 end
