--- a/examples/basic/ios/Podfile
+++ b/examples/basic/ios/Podfile
@@ -5,6 +5,6 @@ project 'basic/basic.xcodeproj'
 
 target "basic" do
 	pod 'libutki', '>= 1.0.21'
-	pod 'libmordavokne', '>= 0.1.4'
-	pod 'libmorda', '>= 0.4.12'
+	pod 'libruisapp', '>= 0.1.4'
+	pod 'libruis', '>= 0.4.12'
 end
