--- a/msvs_solution/libmordavokne/packages.config
+++ b/msvs_solution/libmordavokne/packages.config
@@ -6,8 +6,8 @@
   <package id="libcssom" version="0.2.7" targetFramework="native" />
   <package id="libjpeg_static" version="6.1.1.14" targetFramework="native" />
   <package id="libmikroxml" version="0.1.57" targetFramework="native" />
-  <package id="libmorda" version="0.5.208" targetFramework="native" />
-  <package id="libmorda-render-opengl" version="0.1.61" targetFramework="native" />
+  <package id="libruis" version="0.5.208" targetFramework="native" />
+  <package id="libruis-render-opengl" version="0.1.61" targetFramework="native" />
   <package id="libnitki" version="1.0.78" targetFramework="native" />
   <package id="libopros" version="1.0.89" targetFramework="native" />
   <package id="libpapki" version="1.0.132" targetFramework="native" />
