--- a/android/mordavokne-$(version).pom.in
+++ b/android/mordavokne-$(version).pom.in
@@ -3,7 +3,7 @@
     xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
   <modelVersion>4.0.0</modelVersion>
   <groupId>io.github.cppfw</groupId>
-  <artifactId>mordavokne</artifactId>
+  <artifactId>ruisapp</artifactId>
   <version>$(version)</version>
   <packaging>aar</packaging>
   <dependencies>
@@ -30,7 +30,7 @@
 	  </dependency>
 	  <dependency>
 		  <groupId>io.github.cppfw</groupId>
-		  <artifactId>morda</artifactId>
+		  <artifactId>ruis</artifactId>
 		  <version>[0.5.163,)</version>
 		  <type>aar</type>
 		  <scope>compile</scope>
