--- a/android/mordavokne/build.gradle
+++ b/android/mordavokne/build.gradle
@@ -13,7 +13,7 @@ android {
 
         externalNativeBuild {
             cmake {
-                targets "mordavokne"
+                targets "ruisapp"
             }
         }
     }
@@ -52,7 +52,7 @@ dependencies {
     implementation 'io.github.cppfw:utki:+'
     implementation 'io.github.cppfw:papki:+'
     implementation 'io.github.cppfw:r4:+'
-    implementation 'io.github.cppfw:morda:+'
+    implementation 'io.github.cppfw:ruis:+'
     implementation 'io.github.cppfw:ruis-render-opengles:+'
     implementation 'io.github.cppfw:nitki:+'
 }
