--- a/cocoapods/mordavokne.podspec.in
+++ b/cocoapods/mordavokne.podspec.in
@@ -1,5 +1,5 @@
 Pod::Spec.new do |s|
-  s.name         = "mordavokne"
+  s.name         = "ruisapp"
   s.version      = "$(version)"
   s.summary      = "Intrusive C++ cross-platform GUI library."
   s.homepage     = "https://github.com/cppfw/#{s.name}"
@@ -26,7 +26,7 @@ Pod::Spec.new do |s|
 
   s.dependency 'utki', '>= 1.1.124'
   s.dependency 'nitki', '>= 1.0.41'
-  s.dependency 'morda', '>= 0.5.195'
+  s.dependency 'ruis', '>= 0.5.195'
   s.dependency 'papki', '>= 1.0.93'
   s.dependency 'r4', '>= 0.1.53'
   s.dependency 'ruis-render-opengles', '>= 0.1.37'
