--- a/examples/basic/msvs_solution/basic/basic.vcxproj
+++ b/examples/basic/msvs_solution/basic/basic.vcxproj
@@ -173,8 +173,8 @@
     <Import Project="..\packages\libpng.1.6.23.1\build\native\libpng.targets" Condition="Exists('..\packages\libpng.1.6.23.1\build\native\libpng.targets')" />
     <Import Project="..\packages\cairo_static.1.12.8.3\build\native\cairo_static.targets" Condition="Exists('..\packages\cairo_static.1.12.8.3\build\native\cairo_static.targets')" />
     <Import Project="..\packages\libsvgren.0.3.14\build\native\libsvgren.targets" Condition="Exists('..\packages\libsvgren.0.3.14\build\native\libsvgren.targets')" />
-    <Import Project="..\packages\libmorda.0.5.8\build\native\libmorda.targets" Condition="Exists('..\packages\libmorda.0.5.8\build\native\libmorda.targets')" />
-    <Import Project="..\packages\mordavokne.0.2.5\build\native\mordavokne.targets" Condition="Exists('..\packages\mordavokne.0.2.5\build\native\mordavokne.targets')" />
+    <Import Project="..\packages\libruis.0.5.8\build\native\libruis.targets" Condition="Exists('..\packages\libruis.0.5.8\build\native\libruis.targets')" />
+    <Import Project="..\packages\ruisapp.0.2.5\build\native\ruisapp.targets" Condition="Exists('..\packages\ruisapp.0.2.5\build\native\ruisapp.targets')" />
   </ImportGroup>
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
     <PropertyGroup>
@@ -200,7 +200,7 @@
     <Error Condition="!Exists('..\packages\libpng.1.6.23.1\build\native\libpng.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\libpng.1.6.23.1\build\native\libpng.targets'))" />
     <Error Condition="!Exists('..\packages\cairo_static.1.12.8.3\build\native\cairo_static.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\cairo_static.1.12.8.3\build\native\cairo_static.targets'))" />
     <Error Condition="!Exists('..\packages\libsvgren.0.3.14\build\native\libsvgren.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\libsvgren.0.3.14\build\native\libsvgren.targets'))" />
-    <Error Condition="!Exists('..\packages\libmorda.0.5.8\build\native\libmorda.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\libmorda.0.5.8\build\native\libmorda.targets'))" />
-    <Error Condition="!Exists('..\packages\mordavokne.0.2.5\build\native\mordavokne.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\mordavokne.0.2.5\build\native\mordavokne.targets'))" />
+    <Error Condition="!Exists('..\packages\libruis.0.5.8\build\native\libruis.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\libruis.0.5.8\build\native\libruis.targets'))" />
+    <Error Condition="!Exists('..\packages\ruisapp.0.2.5\build\native\ruisapp.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\ruisapp.0.2.5\build\native\ruisapp.targets'))" />
   </Target>
 </Project>
