--- a/xcode/Podfile
+++ b/xcode/Podfile
@@ -1,15 +1,15 @@
 source 'https://github.com/cppfw/cocoapods-repo.git'
 
-project 'mordavokne/mordavokne.xcodeproj'
+project 'ruisapp/ruisapp.xcodeproj'
 
 # TODO: make 11.0 ?
 platform :ios, '13.0'
 
-target "mordavokne" do
+target "ruisapp" do
 	pod 'utki', '>= 1.1.124'
 	pod 'papki', '>= 1.0.93'
 	pod 'r4', '>= 0.1.53'
 	pod 'treeml', '>= 0.1.28'
-	pod 'morda', '>= 0.5.195'
+	pod 'ruis', '>= 0.5.195'
 	pod 'ruis-render-opengles', '>= 0.1.37'
 end
