--- a/msys2/PKGBUILD
+++ b/msys2/PKGBUILD
@@ -17,10 +17,12 @@ else
 	exit 1
 fi
 
+[ -z "$PACKAGE_VERSION" ] && echo "ERROR: PACKAGE_VERSION env var is not set" && exit 1;
+
 packageName=ruisapp
 
 pkgname="${pkgPrefix}${packageName}"
-pkgver=$(version)
+pkgver=$PACKAGE_VERSION
 pkgrel=1
 epoch=
 pkgdesc="Platform abstraction layer for 'ruis'"
